mikec/tests/PASS/semantic/88.mc
void main(){
	int a = 0;
}

void func1(){
	int a = 0;
	
}
