mikec/tests/FAIL/assign/18.mc
/* Assign char value to int */
void main()
{
	int a = 'a';
}